# RNAblueprint

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  RELEASE_CHECKLIST.md  RNAblueprint_8h.html  RNAblueprint_8h.js  RNAblueprint_8h_source.html  RNAdesign_8h.html  RNAdesign_8h.js  RNAdesign_8h_source.html  aclocal.m4  analyse_test.pl  annotated.html  annotated.js  annotated_dup.js  bug.html  classdesign_1_1DependencyGraph.html  classdesign_1_1DependencyGraph.js  classes.html  common_8h.html  common_8h_source.html  configure.ac  decompose_8h.html  decompose_8h_source.html  dependency__graph_8h.html  dependency__graph_8h_source.html  design.pl  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  doxygen.am  doxygen.cfg  doxygen.cfg.in  files.html  functions.html  functions_func.html  (+32 more)
RNAdesign/: .gitignore  Makefile  Makefile.am  Makefile.bak  Makefile.in  README  common.cc  common.h  configure  configure.ac  decompose.cc  decompose.h  graphcoloring.cc  graphcoloring.h  graphcommon.cc  main.cc  main.h  pathcoloring.cc  pathcoloring.h  printgraph.cc  printgraph.h  treestatistics.cc  treestatistics.h
RNAdesign/examples/: abfalter-fig24.in  design3.1.in
RNAdesign/src/: Makefile.am  Makefile.in  common.cc  common.h  decompose.cc  decompose.h  dependency_graph.cc  dependency_graph.h  energy.cc  energy.h  energy_optimization.cc  graphcoloring.cc  graphcoloring.h  graphcommon.cc  graphcommon.h  main.cc  outtakes.cc  pathcoloring.cc  printgraph.cc  probability_matrix.cc  probability_matrix.h
RNAdesign/tests/: Boost_test.cc  Makefile  Makefile.bak  main.cc  test_common.cc  test_common.h  test_decompose.cc  test_graphcoloring.cc  test_parsestruct.cc  test_pathcoloring.cc  test_random_gen.cc
data/: header.tex
examples/: abfalter-fig24.in  design1.in  design2.in  design3.1.in  design3.in  design4.in  design5.in  design6.in  design_cpp.cc  design_perl.pl  design_python.py  paper-fig2.in  sv11.in
interfaces/: Makefile.am  RNAblueprint.i  RNAdesign.i  generic.mk
interfaces/Perl/: .gitignore  Makefile.PL  Makefile.PL.in  Makefile.am  RNAdesign.pm  RNAdesign_wrap.cxx  version.i.in
interfaces/Python/: Makefile.am  RNAdesign.py  RNAdesign_wrap.cxx  setup.py.in
interfaces/Python2/: .gitignore  Makefile.am  version.i.in
interfaces/Python3/: Makefile.am
lib/: FilteredWrapper.h  Makefile.am  PairToRangeAdaptor.h  RNAblueprint.cc  RNAblueprint.h  RNAdesign.cc  RNAdesign.h  common.cc  common.h  decompose.cc  decompose.h  dependency_graph.cc  dependency_graph.h  ear-decomposition.hpp  graphcoloring.cc  graphcoloring.h  graphcommon.cc  graphcommon.h  outtakes.cc  pairing_matrix.cc  pairing_matrix.h  parsestruct.cc  parsestruct.h  pathcoloring.cc  pathcoloring.h  printgraph.cc  printgraph.h  probability_matrix.cc  probability_matrix.h  struct2graph.cc  struct2graph.h  treestatistics.cc  treestatistics.h  uninduced_subgraph.hpp
m4/: ax_perl_ext.m4  ax_perl_ext_flags.m4  ax_python.m4  ax_python_devel.m4  ax_swig_enable_cxx.m4  ax_swig_multi_module_support.m4  ax_swig_python.m4  boost.m4
src/: Makefile.am  common.cc  common.h  decompose.cc  decompose.h  dependency_graph.cc  dependency_graph.h  energy.cc  energy.h  energy_optimization.cc  energy_optimization.h  graphcoloring.cc  graphcoloring.h  graphcommon.cc  main.cc  main.h  outtakes.cc  parsestruct.cc  parsestruct.h  pathcoloring.cc  printgraph.cc  printgraph.h  probability_matrix.cc  probability_matrix.h  struct2graph.cc  struct2graph.h  treestatistics.cc  treestatistics.h
struct2graph/: Makefile  README  common.cc  common.h  decompose.cc  decompose.h  design2.in  design3.in  graph1.graphml  graph3.graphml  graphcoloring.cc  graphcoloring.h  graphcommon.cc  graphcommon.h  input.cc  main.cc  main.h  outtakes.cc  parsestruct.cc  parsestruct.h  pathcoloring.cc  pathcoloring.h  printgraph.cc  printgraph.h  statistics.txt  struct2graph  struct2graph.cc  struct2graph.h  subgraph1_connected_component1.graphml  subgraph2_biconnected_component1.graphml  subgraph3_biconnected_component2.graphml  treestatistics.cc  treestatistics.h
struct2graph/examples/: design1.in  design4.in  design5.in
struct2graph/tests/: paper-fig2.in  test_pathcoloring.cc
switch/: Makefile  switch.cc  switch.h
tests/: Makefile.am  main.cc  test_RNAblueprint.cc  test_RNAdesign.cc  test_common.cc  test_common.h  test_decompose.cc  test_dependency_graph.cc  test_graphcoloring.cc  test_graphcommon.cc  test_pairing_matrix.cc  test_parsestruct.cc  test_pathcoloring.cc  test_probability_matrix.cc  test_random_gen.cc  test_statistics.cc  test_subgraph.cc  test_uninduced_subgraph.cc
